transitimeWebapp/src/main/webapp/map/css/avlMapUi.css
body {
  margin: 0px;
}

/* For the AVL points */
div.avlMarker {
  background-color: #ff7800;
  border-color: black;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  width:7px;
  height:7px;
}

div.avlTriangle {
  width: 0px;
  height: 0px;
  border-bottom: 10px solid #ff7800;
  border-left: 5px solid transparent;
  border-right: 5px solid transparent
 }

.popupTable {
  border-spacing: 0px;
}
	
.popupTableLabel {
  font-weight: bold;
  text-align: right;
}

/* For the params menu */
#params {
  background: lightgrey;
  position:absolute;
  top:10px;
  right:10px;
  border-radius: 25px;
  padding: 2%;
  border: 2px solid black;
}

 /* Playback menu */
#playbackContainer {
  position: absolute;
  left: 50%;
  bottom: -50%; /* initially hidden */
}
#playback {
  background: lightgrey;
  position: relative;
  left: -50%;
  text-align: center;
  border-radius: 25px;
  padding: 2%;
  font-family: monospace;
  border: 2px solid black;
}

#playback input {
  background: lightgrey;
}

#playback input:hover {
  border: 1px solid #CCC;
  box-shadow: 1px 1px 5px #999
}

#playback input:active {
  background: lightblue;
}

